--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Sunresh</title>
-	<meta name="description" content="The small framework with powerful features">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+<meta charset="UTF-8">
+<title>Sunresh</title>
+<meta name="description" content="The small framework with powerful features">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<link rel="stylesheet" href="https://bootswatch.com/5/litera/bootstrap.min.css" >
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-animate.js"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" >
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" >
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" ></script>
 
-<script type="text/javascript"
-    src="https://d3eoax9i5htok0.cloudfront.net/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-  
 </head>
 <body ng-app="main-App" class="container-fluid">
 <header>
@@ -29,11 +23,9 @@
 			<li class="menu-item "><a href="#!/about">About</a></li>
 		</ul>
 	</div>
-
 </header>
 
 <div ng-view></div>
-
 
 <script>
     $(".nav li").on("click", function() {
@@ -66,7 +58,6 @@ app.config(['$routeProvider',
 }]);
 
 </script>
-
 
 </body>
 </html>
