--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <title>Sunresh</title>
 <meta name="description" content="The small framework with powerful features">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="stylesheet" href="https://bootswatch.com/5/litera/bootstrap.min.css" >
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" >
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" >
+  
 </head>
 <body ng-app="main-App" class="container-fluid">
 <header>
