--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body ng-app="main-App" class="container-fluid">
 <header>
-	<div class="menu">
+	<nav class="nav">
 		<ul class="nav nav-tabs" role="tablist">
-			<li class="menu-item active" role="presentation" ><a href="#!/">Home</a></li>
-			<li class="menu-item "><a href="#!/dashboard">Dashboard</a></li>
+			<li class="nav-item active" role="presentation" ><a href="#!/">Home</a></li>
+			<li class="nav-item "><a href="#!/dashboard">Dashboard</a></li>
 			<li class="menu-item "><a href="#!/download">Downloads</a></li>
 			<li class="menu-item "><a href="#!/about">About</a></li>
 		</ul>
-	</div>
+	</nav>
 </header>
 
 <div ng-view></div>
