--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <header>
 	<nav class="nav">
 		<ul class="nav nav-tabs" role="tablist">
-			<li class="nav-item active" role="presentation" ><a href="#!/">Home</a></li>
-			<li class="nav-item "><a href="#!/dashboard">Dashboard</a></li>
-			<li class="menu-item "><a href="#!/download">Downloads</a></li>
-			<li class="menu-item "><a href="#!/about">About</a></li>
+			<li class="nav-item active" role="presentation" ><a class="nav-link" href="#!/">Home</a></li>
+          <li class="nav-item "><a class="nav-link" href="#!/dashboard">Dashboard</a></li>
+          <li class="menu-item "><a class="nav-link" href="#!/download">Downloads</a></li>
+          <li class="menu-item "><a class="nav-link" href="#!/about">About</a></li>
 		</ul>
 	</nav>
 </header>
