--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script>
     $(".nav li").on("click", function() {
       $(".nav li").removeClass("active");
-      $(this).addClass("active");
+      $(this).addClass("active bg-success");
     });
 </script>
 <script>
