--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 </header>
 
 <div ng-view></div>
-
+<div class="footer">
+  <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
+  <div>&copy;Naresh Dhungana</div>
+</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
