--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div ng-view></div>
 <div class="footer">
-  <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
+  <div>For more detail : <a href="http://nareshdhungana.com.np" target="_blank">www.nareshdhungana.com.np</a></div>
   <div>&copy;Naresh Dhungana</div>
 </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
