--- a/android/index.html
+++ b/android/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+	<meta charset="UTF-8">
+	<title>Sunresh</title>
+	<meta name="description" content="The small framework with powerful features">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" >
 
+  </head>
+  <body>
+	<div class="card">
+	  <div class="card-header">This is your choice..</div>
+	</div>
+	
+  </body>
+</html>
