--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<ul class="nav nav-tabs" role="tablist">
 	  <li class="nav-item active bg-warning " role="presentation" ><a class="nav-link" href="#!/">Home</a></li>
       <li class="nav-item "><a class="nav-link" href="#!/dashboard">Dashboard</a></li>
-      <li class="menu-item "><a class="nav-link" href="#!/download">Downloads</a></li>
+      <li class="menu-item "><a class="nav-link" href="#!/english">English</a></li>
       <li class="menu-item "><a class="nav-link" href="#!/math">Mathematics</a></li>
       <li class="menu-item "><a class="nav-link" href="#!/about">About</a></li>
 	</ul>
@@ -43,7 +43,7 @@ var app =  angular.module('main-App',['ngRoute',]);
 app.config(['$routeProvider',function($routeProvider){$routeProvider.
             when('/',{templateUrl:'partial/home.html',controller:'AdminController'}).
             when('/dashboard',{templateUrl:'partial/dashboard.html',controller:'ItemController'}).
-            when('/download',{templateUrl:'partial/download.html',controller:'AdminController'}).
+            when('/english',{templateUrl:'partial/english.html',controller:'AdminController'}).
             when('/math',{templateUrl:'partial/math.html',controller:'MathCtrl'}).
             when('/about',{templateUrl:'partial/about.html',controller:'ItemController'});
 }]);
